- board_detail 이미지가 없는경우 엑박뜨지 않게 변경

--- a/src/main/resources/templates/board_detail.html
+++ b/src/main/resources/templates/board_detail.html
@@ -131,7 +131,8 @@ table.table table-hover td {
                                 </tr>
                                 <tr>
                                     <td colspan="3" style="text-align:left;border-top:none; padding-top: 80px">
-                                        <img th:src="@{/image/}+${uploadfilename}" width="100" height="80 "/>
+
+                                        <img th:if="${uploadfilename != null }" th:src="@{/image/}+${uploadfilename}" width="100" height="80 "/>
                                         <!--
                                         줄바꿈
                                         https://offbyone.tistory.com/326
